Refactoring utils, units as well as input and result data handling.